--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ollama": "^0.5.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
